--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p id="subtitle">Click start to begin!</p>
         <button id="startButton">Start</button>
         <audio id="questionAudio"></audio>
+        <img id="questionImage" src="" alt="Question Image" style="display: none; max-width: 100%; height: auto;">
         <p id="userResponse"></p>
     </div>
     
